<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_three"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:padding="6dp"
            android:text="@string/register_car" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_set_speed_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:padding="6dp"
            android:text="@string/set_speed_limit" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_report_accident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:padding="6dp"
            android:text="@string/report_accident" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_report_illegal_parking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:padding="6dp"
            android:text="@string/report_illegal_parking" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_track_my_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:padding="6dp"
            android:text="@string/track_my_car" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_set_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:padding="6dp"
            android:text="@string/set_zone" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_zonal_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="14dp"
            android:padding="6dp"
            android:text="@string/zonal_tracking"/>

    </LinearLayout>
</ScrollView>
